--- a/Classibility/Base.lproj/Main.storyboard
+++ b/Classibility/Base.lproj/Main.storyboard
@@ -122,7 +122,7 @@
                         <outlet property="forgetLabel" destination="l0p-lC-cxS" id="3ne-sf-yxU"/>
                         <outlet property="loginButton" destination="Oxg-j6-dv2" id="drx-VN-SRz"/>
                         <outlet property="registerLabel" destination="sJJ-Ah-mvE" id="7bM-xk-2Bg"/>
-                        <segue destination="4Xa-wY-enL" kind="show" identifier="loginToHome" id="tGp-kS-wZ9"/>
+                        <segue destination="pJ3-y3-En0" kind="presentation" identifier="LoginToHomePage" id="LBp-4p-S37"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -373,6 +373,7 @@
         <!--View Controller-->
         <scene sceneID="hL3-fw-pLF">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O3w-GP-2IC" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="4Xa-wY-enL" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0LL-Ii-8Me">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -391,9 +392,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="kgo-q3-ZgQ"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="O3w-GP-2IC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2652" y="26.53673163418291"/>
+            <point key="canvasLocation" x="3903" y="-541"/>
         </scene>
         <!--Class Table View Controller-->
         <scene sceneID="XX1-sO-dgk">
@@ -487,7 +487,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jmi-Bs-gEU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3381.5999999999999" y="26.53673163418291"/>
+            <point key="canvasLocation" x="2351" y="-29"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
